# chat-templates

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run_all_tests.py
.github/workflows/: ci.yml
qwen2.5/tests/: test_multimodal.py  test_tool_messages.py
qwen2_5/: chat_template.jinja
qwen2_5/tests/: test_assistant_messages.py  test_multimodal.py  test_system_messages.py  test_tool_messages.py
