[project]
name = "chat-templates"
version = "0.1.0.dev"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "pillow",
    "transformers",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]
